fix: final bugs fix in index.html, style.css, feat: add links in readme.md

--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>CV Aksenov</title>
     <link rel="icon" href="assets/img/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body class="global">
+  <body>
     <div class="flex-container">
       <div class="flex-item item-1">
         <div class="flex-item item-11">
-          <img src="assets/img/Aksenov1.jpg" alt="Фотографическая карта Алексея Аксёнова.">
+          <img src="assets/img/Aksenov1.jpg" alt="Photo of Aleksei Aksenov.">
         </div>
-        <div class="flex-item item-12">1.2</div>
+        <div class="flex-item item-12">
+          <h1>Aleksei Aksenov</h1>
+          <hr>
+          <h4>Junior Fullstack Developer</h4>
+        </div>
       </div>
       <div class="flex-item item-2">
         <div class="flex-item item-21">Contact information:</div>
@@ -85,7 +89,7 @@ On this service, users will be able to publish recipes, subscribe to publication
 <br>
 The application works on the following technologies:
 <br>
-<img src="https://img.shields.io/badge/django-blue?style=for-the-badge&logo=django&logoColor=white"/> <img src="https://img.shields.io/badge/rest-framework-blue?style=for-the-badge&logo=django&logoColor=white"/> <img src="https://img.shields.io/badge/postgres-blue?style=for-the-badge&logo=PostgreSQL&logoColor=white"/> <img src="https://img.shields.io/badge/react-blue?style=for-the-badge&logo=React&logoColor=white"/>
+<img src="https://img.shields.io/badge/django-blue?style=for-the-badge&logo=django&logoColor=white" alt="django icon"> <img src="https://img.shields.io/badge/rest-framework-blue?style=for-the-badge&logo=django&logoColor=white" alt="rest-framework icon"> <img src="https://img.shields.io/badge/postgres-blue?style=for-the-badge&logo=PostgreSQL&logoColor=white" alt="postgres icon"> <img src="https://img.shields.io/badge/react-blue?style=for-the-badge&logo=React&logoColor=white" alt="react icon">
 
         </div>
       </div>
@@ -114,6 +118,16 @@ The application works on the following technologies:
             <li>English - B1</li>
           </ul>
         </div>
+      </div>
+      <div class="flex-item item-9">
+        <a href="https://github.com/Aleksei-Aksenov"><img src="assets/img/GitHub.png" width="50" 
+        height="50" alt="Link to GitHub Aleksei-Aksenov"></a>
+        <a href="https://rs.school/js/"><img src="assets/img/RS-School.png" width="150" 
+          height="50" alt="Link to RS-School"></a>
+        <hr>
+        <h6>
+          Aleksei Aksenov 2022
+        </h6>
       </div>
     </div>
   </body>
