refactor: refactor footr in index.html

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ The application works on the following technologies:
           </ul>
         </div>
       </div>
-      <div class="flex-item item-9">
+      <footer class="flex-item">
         <a href="https://github.com/Aleksei-Aksenov"><img src="assets/img/GitHub.png" width="50" 
         height="50" alt="Link to GitHub Aleksei-Aksenov"></a>
         <a href="https://rs.school/js/"><img src="assets/img/RS-School.png" width="150" 
@@ -128,7 +128,7 @@ The application works on the following technologies:
         <h6>
           Aleksei Aksenov 2022
         </h6>
-      </div>
+      </footer>
     </div>
   </body>
 </html>
