--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="flex-item item-12">
           <h1>Aleksei Aksenov</h1>
           <hr>
-          <h4>Junior Fullstack Developer</h4>
+          <h4>Junior Backend Developer</h4>
         </div>
       </div>
       <div class="flex-item item-2">
@@ -33,7 +33,7 @@
       </div>
       <div class="flex-item item-3">
         <div class="flex-item item-31">About myself:</div>
-        <div class="flex-item item-32">I'm 32 years. I have extensive experience in the oil refining industry. I have worked at an oil refinery for 10 years, until one day I realized that this job brings me good income, but not satisfaction. I wanted to do something in which I would have desire to develop and become better day by day. That's why I'm here. Coding is what really turns me on. My goal is to become a full stack developer. I started the path to this goal in 2022 by enrolling in back-end development courses, which I had successfully been completed after 9 months of study. Now I am actively studying front-end development. I understand that you should not expect quick results, but as you know, only the walking one will master the road.</div>
+        <div class="flex-item item-32">I'm 34 years. I have extensive experience in the oil refining industry. I have worked at an oil refinery for 10 years, until one day I realized that this job brings me good income, but not satisfaction. I wanted to do something in which I would have desire to develop and become better day by day. That's why I'm here. Coding is what really turns me on. My goal is to become a full stack developer. I started the path to this goal in 2022 by enrolling in back-end development courses, which I had successfully been completed after 9 months of study. Now I am actively studying back-end and front-end development. I understand that you should not expect quick results, but as you know, only the walking one will master the road.</div>
       </div>
       <div class="flex-item item-4">
         <div class="flex-item item-41">Skills and Proficiency:</div>
@@ -42,7 +42,6 @@
                 <li>Python (including Django framework)</li>
                 <li>Git/GitHub</li>
                 <li>VS Code, IntelliJ IDEA</li>
-                <li>Adobe Photoshop</li>
                 <li>Windows, Linux</li>
               </ul>
         </div>
@@ -102,6 +101,11 @@ The application works on the following technologies:
                 <li>Oil and gas processing equipment</li>
               </ul>
             </li>
+            <li>Ufa University of Science and Technology
+              <ul>
+                <li>Applied Informatics</li>
+              </ul>
+            </li>
             <li>Yandex Practicum
               <ul>
                 <li>Python Developer Training Course</li>
@@ -122,11 +126,9 @@ The application works on the following technologies:
       <footer class="flex-item">
         <a href="https://github.com/Aleksei-Aksenov"><img src="assets/img/GitHub.png" width="50" 
         height="50" alt="Link to GitHub Aleksei-Aksenov"></a>
-        <a href="https://rs.school/js/"><img src="assets/img/RS-School.png" width="150" 
-          height="50" alt="Link to RS-School"></a>
         <hr>
         <h6>
-          Aleksei Aksenov 2022
+          Aleksei Aksenov 2024
         </h6>
       </footer>
     </div>
